--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/express": "^4.17.1",
     "@types/gun": "^0.9.1",
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.141",
     "@types/socket.io": "^2.1.3",
     "@types/socket.io-client": "^1.4.32",
