--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "jest --no-cache --watch",
     "typecheck": "tsc",
     "lint": "eslint \"services/gunDB/**/*.js\"",
-    "format": "prettier --write \"./**/*.js\""
+    "format": "prettier --write \"./**/*.js\"",
+    "gun:test": "node tests/index.js"
   },
   "author": "",
   "license": "ISC",
