--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:watch": "nodemon main.js -- -h 0.0.0.0",
     "test": "jest --no-cache",
     "test:watch": "jest --no-cache --watch",
+    "test:e2e": "jest --no-cache -c tests/e2e/jest.e2e.js",
     "typecheck": "tsc",
     "lint": "eslint \"services/gunDB/**/*.js\"",
     "format": "prettier --write \"./**/*.js\"",
