--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,25 +6,74 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "cSpell.words": [
     "acked",
+    "addinvoice",
     "Authing",
+    "channelbalance",
     "ciphertext",
+    "closechannel",
+    "closedchannels",
+    "Cltv",
+    "connectpeer",
+    "disconnectpeer",
     "eccrypto",
     "endregion",
     "ephem",
     "epriv",
     "Epub",
+    "estimatefee",
+    "estimateroutefee",
+    "exportallchanbackups",
+    "exportchanbackup",
     "falsey",
+    "forwardinghistory",
+    "getchaninfo",
+    "getinfo",
+    "getnetworkinfo",
+    "getnodeinfo",
     "GUNRPC",
+    "Healthz",
+    "initwall",
     "ISEA",
+    "keysend",
+    "kubernetes",
+    "listchannels",
+    "listinvoices",
+    "listpayments",
+    "listpeers",
+    "listunspent",
+    "lndchanbackups",
     "LNDRPC",
     "lndstreaming",
+    "lnrpc",
+    "lres",
+    "newaddress",
+    "openchannel",
+    "otheruser",
+    "payreq",
+    "pendingchannels",
+    "preimage",
     "PUBKEY",
+    "qrcode",
+    "queryroute",
     "radata",
     "Reqs",
+    "sendcoins",
+    "sendmany",
+    "sendpayment",
+    "sendtoroute",
     "shockping",
     "SHOCKWALLET",
+    "signmessage",
+    "spont",
     "thenables",
+    "trackpayment",
+    "txid",
+    "unfollow",
+    "Unlocker",
     "unsubscription",
-    "uuidv"
+    "utxos",
+    "uuidv",
+    "verifymessage",
+    "walletbalance"
   ]
 }
